# VPN

./: CMakeLists.txt  ConnectionTpl.cpp  ConnectionTpl.h  LICENSE  README (1).md  README.md  main.cpp  vpn
AES/: AES.cpp  AES.h
Client/: VPNClient.cpp  VPNClient.h
Connection/: Connection.h  ConnectionTpl.cpp  ConnectionTpl.h  ConnectionTpl.tpp
Credentials/: Credentials.h
Packet/: Packet.cpp  Packet.h
SRC/: main.cpp  simple_server.cpp
Server/: VPNServer.cpp  VPNServer.h
Socket/: Socket.cpp  Socket.h
Tests/: test.cpp
Tunnel/: VPNTunnel.cpp  VPNTunnel.h
User/: VPNUser.cpp  VPNUser.h
VPNManager/: VPNManager.cpp  VPNManager.h
planning/: pseudo code.txt  pseudocode_client.txt
protocol/: BasicProtocol.cpp  basicProtocol.h  protocol.h
vpn.dSYM/Contents/: Info.plist
vpn.dSYM/Contents/Resources/DWARF/: vpn
vpn.dSYM/Contents/Resources/Relocations/x86_64/: vpn.yml
